커밋로직추가

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -30,3 +30,12 @@ jobs:
       - name: Update readMe.md
         run: |
           python autoUpload.py
+      - name: Commit changes
+        run: |
+        git config --global user.name 'Kuhy'
+        git config --global user.email 'kwh1019_@naver.com'
+        git add -A
+        git commit -am "auto-update README.md" # 커밋 메시지
+      - name: Push changes
+        run: |
+        git push
