--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -27,6 +27,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install requests
+          git pull origin main
       - name: Update readMe.md
         run: |
           python autoUpload.py
@@ -38,5 +39,4 @@ jobs:
           git commit -am "auto-update README.md" # 커밋 메시지
       - name: Push changes
         run: |
-          gir pull origin main
           git push
